<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registrese_">Registrese!</string>
    <string name="nombre">Nombre</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="password">Password</string>
    <string name="con_que_frecuencia_vas_al_cine_">Con que frecuencia vas al Cine?</string>
    <string name="email">Email</string>
    <string name="title_activity_elegir">ElegirActivity</string>
    <string name="eliga_su_pelicula_favorita_de_la_semana_">Eliga su pelicula favorita de la semana:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="ingrese_email">Ingrese email</string>
    <string name="title_activity_aplication">AplicationActivity</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="el_conjuro">El Conjuro</string>
    <string name="descripcion_">Descripcion:</string>
    <string name="cambiar_pelicula">Cambiar Pelicula</string>
    <string name="elegir_cine">Elegir Cine</string>
    <string name="title_activity_peli">PeliActivity</string>
    <string name="title_activity_peli_db_helper">Peliculas</string>
    <string name="title_activity_peliculas_db_helper">PeliculasDbHelper</string>
    <string name="elija_su_pelicula_favorita_de_la_semana_">Elija su pelicula favorita de la semana:</string>
    <string name="comentarios">Comentarios</string>
    <string name="titulo_pelicula">Titulo Pelicula</string>
    <string name="obs">Obs</string>
    <string name="title_activity_historial_main">HistorialMainActivity</string>
    <string name="agregar_pelicula">Agregar Pelicula</string>
    <string name="title_activity_historial">HistorialActivity</string>
    <string name="nombre_pelicula">Nombre Pelicula</string>
    <string name="nota">Nota</string>
    <string name="guardar_pelicula">Guardar Pelicula</string>
    <string name="genero">Genero</string>
    <string name="historial_de_las_peliculas">Historial de las Peliculas</string>
    <string name="historial_de_peliculas_que_he_visto_este_a_o_">Historial de peliculas que he visto este año:</string>
    <string name="historial_de_mis_peliculas">Historial de mis peliculas</string>
    <string name="historial_de_peliculas_que_he_visto_en_el_cine_">Historial de peliculas que he visto en el Cine:</string>
    <string name="nota_de_1_a_7">Nota de 1 a 7</string>
    <string name="descripcion">Descripcion</string>
    <string name="ver_horarios">Ver horarios</string>
    <string name="title_activity_horario">HorarioActivity</string>
    <string name="horario_de_semanal">Horario de Semanal</string>
    <string name="small_text">Small Text</string>
    <string name="large_text">Large Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="title_activity_busca_minas_main">BuscaMinas</string>
    <string name="title_activity_casilla">Casilla</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="quieres_jugar_">Quieres jugar?</string>
    <string name="title_activity_encuesta">EncuestaActivity</string>
    <string name="accion">Accion</string>
    <string name="terror">Terror</string>
    <string name="ficcion">Ficcion</string>
    <string name="tipo_de_genero_favorito_">Tipo de genero favorito:</string>
    <string name="nacional">Nacional</string>
    <string name="internacional">Internacional</string>
    <string name="algun_comentario_">Algun comentario:</string>
    <string name="ingrese_comentario_">Ingrese comentario!</string>
    <string name="que_pelicula_prefiere_">Que pelicula prefiere:</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_respuesta_en">RespuestaEnActivity</string>
    <string name="button">Button</string>
    <string name="preferencia">Preferencia</string>
    <string name="comentario_">Comentario:</string>
    <string name="respuesta">Respuesta</string>
    <string name="responder_encuesta">Responder Encuesta</string>
    <string name="salir">Salir</string>
    <string name="res">Res</string>

</resources>
