<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EncuestaActivity" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" >

        <RadioButton
            android:id="@+id/op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accion" />

        <RadioButton
            android:id="@+id/op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terror" />

        <RadioButton
            android:id="@+id/op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ficcion" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_marginTop="22dp"
        android:text="@string/tipo_de_genero_favorito_" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="32dp"
        android:text="@string/que_pelicula_prefiere_" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" >

        <RadioButton
            android:id="@+id/nacional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nacional" />

        <RadioButton
            android:id="@+id/inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internacional" />

       
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/radioGroup2"
        android:layout_marginTop="27dp"
        android:text="@string/algun_comentario_" />

    <EditText
        android:id="@+id/comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/ingrese_comentario_" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonEncuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="onSubmitForm"
        android:text="@string/enviar" />

</RelativeLayout>