<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AplicationActivity" >

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onProfileButtonClicked"
        android:text="@string/profile" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onLogoutButtonClicked"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bienvenido" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="58dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/descripcion_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RatingBar
        android:id="@+id/valorPeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/valorPeli"
        android:layout_centerHorizontal="true"
        android:text="@string/el_conjuro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/setting"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onChangePelicula"
        android:text="@string/cambiar_pelicula" />

    <Button
        android:id="@+id/elegirCine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/setting"
        android:layout_alignBottom="@+id/setting"
        android:layout_alignRight="@+id/textView3"
        android:text="@string/elegir_cine" />

    <EditText
        android:id="@+id/observaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elegirCine"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/comentarios"
        android:inputType="textMultiLine" />

</RelativeLayout>