<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".PersonActivity" >
    
     <EditText
         android:id="@+id/firstNameField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/nombre_pelicula"
         android:inputType="text" />
    
	<EditText
	    android:id="@+id/lastNameField"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/genero"
	    android:inputType="text" />
      
	<EditText
	    android:id="@+id/emailField"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/comentarios"
	    android:inputType="textEmailAddress" />
	
	<EditText
	    android:id="@+id/userField"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/nota_de_1_a_7"
	    android:inputType="textEmailAddress" />
	
	 <Button
	     android:id="@+id/saveButton"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="17dp"
	     android:onClick="onSaveButtonClicked"
	     android:text="@string/guardar_pelicula" />
	 
	 <Button
	        android:id="@+id/deleteButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:visibility="invisible"
	        android:onClick="onDeleteButtonClicked" />

</LinearLayout>