<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".HistorialMainActivity" >
    
    


	
	<ListView
	    android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="50dp"/>

	<TextView
	    android:id="@+id/obs"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@android:id/list"
	    android:layout_alignParentTop="true"
	    android:text="@string/historial_de_peliculas_que_he_visto_en_el_cine_"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/addButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="82dp"
	    android:onClick="onAddButtonClicked"
	    android:text="@string/agregar_pelicula" />

	<Button
	    android:id="@+id/salirJuego"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="20dp"
	    android:onClick="onEncuesta"
	    android:text="@string/responder_encuesta" />

</RelativeLayout>